# antsichaut

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  action.yml  antsi_change_pr_getter.py  cspell.config.yaml  entrypoint.sh  pyproject.toml  requirements.txt  tox.ini
.config/: dictionary.txt  requirements-dev.txt
.github/: release-drafter.yml
.github/workflows/: main.yml  publish.yaml  release.yml  test.yml
antsichaut/: antsichaut.py
test/: CHANGELOG.rst  galaxy.yml
test/changelogs/: changelog.yaml  config.yaml
tests/: test_basic.py
tests/fixtures/changelogs/: changelog.yaml
