[tool.poetry]
name = "antsichaut"
version = "0.1.0"
description = "antsichaut automates ansible changelog generation from GitHub Pull Requests"
authors = ["Sebastian Gumprich <sebastian.gumprich@t-systems.com>"]
license = "GPLv2 or later"

[tool.poetry.dependencies]
python = "^3.8"
ConfigArgParse = "^1.4.1"

[tool.poetry.dev-dependencies]
requests = "^2.25.1"
"ruamel.yaml" = "^0.17.9"

[tool.poetry.scripts]
antsichaut = "antsichaut.antsichaut:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
